--- a/i3/status.conf
+++ b/i3/status.conf
@@ -16,6 +16,7 @@ order += "run_watch DHCP"
 order += "run_watch VPN"
 order += "wireless wlan0"
 order += "ethernet eth0"
+order += "ethernet usb0"
 order += "battery 1"
 order += "battery 0"
 order += "load"
@@ -30,6 +31,12 @@ ethernet eth0 {
         # if you use %speed, i3status requires root privileges
         format_up = "E: %ip (%speed)"
         format_down = "E: down"
+}
+
+ethernet usb0 {
+        # if you use %speed, i3status requires root privileges
+        format_up = "Usb: %ip (%speed)"
+        format_down = "Usb: down"
 }
 
 battery 0 {
