--- a/i3/config
+++ b/i3/config
@@ -150,9 +150,6 @@ bar {
         status_command i3status -c ~/.i3/status.conf
 }
 
-# Use Gnome daemon to handle multimedia keys
-exec --no-startup-id gnome-settings-daemon
-
 # Use network manager applet to connect to wifi
 exec --no-startup-id nm-applet
 
@@ -160,13 +157,10 @@ exec --no-startup-id nm-applet
 exec --no-startup-id redshift-gtk -l 48.85341:2.3488
 
 # Start Bluetooth applet
-exec --no-startup-id blueman-applet
+#exec --no-startup-id blueman-applet
 
 # Background
 exec --no-startup-id feh --bg-scale /home/lao/Pictures/wallpaper.jpg
-
-# Owncloud
-exec --no-startup-id owncloud
 
 # Lock screen
 bindcode $mod+21 exec dm-tool lock
@@ -176,6 +170,7 @@ for_window [class="^Oracle VM VirtualBox"] floating enable
 
 # Spotify must float to avoid display bugs
 for_window [class="^Spotify$"] floating enable
+for_window [class="^VidyoDesktop$"] floating enable
 
 # Wine must float to avoid display bugs
 for_window [class="^Wine$"] floating enable
@@ -204,3 +199,13 @@ bindsym $mod+Shift+o exec dm-tool lock
 # Move workspaces between screens
 bindsym $mod+y move workspace to output left
 bindsym $mod+u move workspace to output right
+
+# Multimedia keys
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 1 +5%
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume 1 -5%
+bindsym XF86AudioMute exec pactl set-sink-mute 1 toggle
+bindsym XF86MicMute exec pactl set-sink-input-mute 0 toggle
+
+# Sreen brightness controls
+bindsym XF86MonBrightnessUp exec xbacklight -inc 20
+bindsym XF86MonBrightnessDown exec xbacklight -dec 20
