--- a/i3/status.conf
+++ b/i3/status.conf
@@ -14,20 +14,19 @@ general {
 order += "disk /home"
 order += "run_watch DHCP"
 order += "run_watch VPN"
-order += "wireless wlan0"
-order += "ethernet eth0"
+order += "wireless wlp2s0"
+order += "ethernet enp0s31f6"
 order += "ethernet usb0"
-order += "battery 1"
-order += "battery 0"
 order += "load"
+order += "volume master"
 order += "tztime local"
 
-wireless wlan0 {
+wireless wlp2s0 {
         format_up = "W: (%quality at %essid) %ip"
         format_down = "W: down"
 }
 
-ethernet eth0 {
+ethernet enp0s31f6 {
         # if you use %speed, i3status requires root privileges
         format_up = "E: %ip (%speed)"
         format_down = "E: down"
@@ -37,14 +36,6 @@ ethernet usb0 {
         # if you use %speed, i3status requires root privileges
         format_up = "Usb: %ip (%speed)"
         format_down = "Usb: down"
-}
-
-battery 0 {
-        format = "%status %percentage %remaining"
-}
-
-battery 1 {
-        format = "%status %percentage %remaining"
 }
 
 run_watch DHCP {
@@ -65,4 +56,10 @@ load {
 
 disk "/home" {
         format = "%avail"
+}
+
+volume master {
+        format = "♪ %volume"
+        format_muted = "♪ muted (%volume)"
+        device = "pulse:0"
 }
