--- a/i3/status.conf
+++ b/i3/status.conf
@@ -12,6 +12,7 @@ general {
 }
 
 order += "disk /home"
+order += "battery all"
 order += "run_watch DHCP"
 order += "run_watch VPN"
 order += "wireless wlp2s0"
@@ -20,6 +21,10 @@ order += "ethernet usb0"
 order += "load"
 order += "volume master"
 order += "tztime local"
+
+battery all {
+				format = "%status %remaining (%emptytime %consumption)"
+}
 
 wireless wlp2s0 {
         format_up = "W: (%quality at %essid) %ip"
