--- a/i3/status.conf
+++ b/i3/status.conf
@@ -23,7 +23,7 @@ order += "volume master"
 order += "tztime local"
 
 battery all {
-				format = "%status %remaining (%emptytime %consumption)"
+				format = "%status %percentage %remaining (%emptytime %consumption)"
 }
 
 wireless wlp2s0 {
